--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@prisma/client": "^6.19.0",
+    "@prisma/extension-accelerate": "^2.0.2",
     "express": "^5.1.0",
     "mysql2": "^3.15.3",
     "nodemon": "^3.1.10"
